--- a/public/package.json
+++ b/public/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
